[package]
name = "cocinero"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.5.57", features = ["derive"] }
env_logger = "0.11.8"
handlebars = "6.4.0"
itertools = "0.14.0"
log = "0.4.29"
petgraph = { version = "0.8.3", default-features = false, features = ["graphmap", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.9.11"
